--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   background-color: #1e1e2e;
   overflow: hidden;
   user-select: none;
+  -drag: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
 }
 
 h1 {
@@ -89,12 +93,22 @@ a:active {
   font-family: 'Space Mono', monospace;
   color: #cdd6f4;
   font-size: large;
+  user-select: none;
+  -drag: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
 }
 
 footer {
   position: fixed;
   width: 100%;
   bottom: 0; 
+  user-select: none;
+  -drag: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
 }
 
 .center-content {
