--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "Victor Mono";
-  src: url("./fonts/victormono-regular-webfont.woff") format("woff");
+  src: url("https://hellyy.ml/fonts/victormono-regular-webfont.woff") format("woff");
   }
 
   @font-face {
     font-family: "Victor Mono Italic";
-    src: url("./fonts/victormono-italic-webfont.woff") format("woff");
+    src: url("https://hellyy.ml/fonts/victormono-italic-webfont.woff") format("woff");
     }
 
 body {
