Fixed fonts again

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "Victor Mono";
-  src: url("https://hellyy.ml/fonts/victormono-regular-webfont.woff") format("woff");
+  src: url("https://helly.wtf/fonts/victormono-regular-webfont.woff") format("woff");
 }
 
 @font-face {
   font-family: "Victor Mono Italic";
-  src: url("https://hellyy.ml/fonts/victormono-italic-webfont.woff") format("woff");
+  src: url("https://helly.wtf/fonts/victormono-italic-webfont.woff") format("woff");
 }
 
 body {
