--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
   -webkit-user-drag: none;
   -webkit-user-select: none;
   z-index: 2;
+  cursor: grabbing;
+  
 }
 
 h1 {
@@ -207,7 +209,7 @@ footer {
   width: 100%;
   position: absolute;
   z-index: 1;
-  backdrop-filter: blur(12vmax);
+  backdrop-filter: blur(14vmax);
   -webkit-backdrop-filter: blur(12vmax);
 }
 
